bootstrap for book.component

--- a/book-rating/src/app/book/book.component.html
+++ b/book-rating/src/app/book/book.component.html
@@ -1,4 +1,8 @@
-<h2>{{ book.title}} - {{ book.rating }}</h2>
-<p>
-  {{ book.desciption }}
-</p>
+<div class="well">
+  <div class="thumbnail pull-right">
+  <img src="http://gravatar.com/avatar/{{ book.rating }}?s=80&default=wavatar">
+  </div>
+
+  <h2>{{ book.title }} <small>Stars {{ book.rating }}</small></h2>
+  <p>{{ book.description }}</p>
+</div>
