rating of books

--- a/book-rating/src/app/book/book.component.html
+++ b/book-rating/src/app/book/book.component.html
@@ -5,4 +5,7 @@
 
   <h2>{{ book.title }} <small>Stars {{ book.rating }}</small></h2>
   <p>{{ book.description }}</p>
+
+  <button (click)="rateDown()">-1</button>
+  <button (click)="rateUp()">+1</button>
 </div>
