--- a/book-rating/src/app/dashboard/dashboard.component.html
+++ b/book-rating/src/app/dashboard/dashboard.component.html
@@ -1,13 +1,5 @@
-<div *ngFor="let b of books; index as i; even as e"
-     [ngClass]="{ gray: e }">
-
-  {{ i | addOne }}.
-
   <br-book
+    *ngFor="let b of books"
     [book]="b"
     (rated)="reorderBooks($event)"
   ></br-book>
-
-  <hr>
-
-</div>
