--- a/book-rating/src/app/create-book/create-book.component.html
+++ b/book-rating/src/app/create-book/create-book.component.html
@@ -2,12 +2,18 @@
 
   <div class="form-group">
     <label for="isbn">ISBN</label>
-    <input class="form-control" name="isbn" [(ngModel)]="book.isbn">
+    <input
+      required
+      class="form-control" name="isbn" [(ngModel)]="book.isbn" #isbn>
+
+    {{ isbn.className }}
   </div>
 
   <div class="form-group">
     <label for="title">Title</label>
-    <input class="form-control" name="title" [(ngModel)]="book.title">
+    <input
+      required
+      class="form-control" name="title" [(ngModel)]="book.title">
   </div>
 
   <div class="form-group">
