--- a/book-rating/src/app/create-book/create-book.component.html
+++ b/book-rating/src/app/create-book/create-book.component.html
@@ -4,16 +4,24 @@
     <label for="isbn">ISBN</label>
     <input
       required
-      class="form-control" name="isbn" [(ngModel)]="book.isbn" #isbn>
+      class="form-control" name="isbn" [(ngModel)]="book.isbn"
+      #isbn="ngModel">
 
-    {{ isbn.className }}
+    <div *ngIf="isbn.invalid && isbn.touched" class="alert alert-danger">
+      Please enter a valid ISBN!
+    </div>
   </div>
 
   <div class="form-group">
     <label for="title">Title</label>
     <input
       required
-      class="form-control" name="title" [(ngModel)]="book.title">
+      class="form-control" name="title" [(ngModel)]="book.title"
+      #title="ngModel">
+
+    <div *ngIf="title.invalid && title.touched" class="alert alert-danger">
+      Please enter a valid title!
+    </div>
   </div>
 
   <div class="form-group">
