form.reset + disabling the button

--- a/book-rating/src/app/create-book/create-book.component.scss
+++ b/book-rating/src/app/create-book/create-book.component.scss
@@ -1,10 +1,10 @@
 .form-control.ng-dirty {
 
   &.ng-valid {
-    border-left: 4px solid green;
+    border-left: 4px solid limegreen;
   }
 
   &.ng-invalid {
-    border-left: 4px solid red;
+    border-left: 4px solid orangered;
   }
 }
