--- a/book-rating/src/app/create-book/create-book.component.html
+++ b/book-rating/src/app/create-book/create-book.component.html
@@ -1,9 +1,9 @@
-<form>
+<form #bookForm="ngForm">
 
   <div class="form-group">
     <label for="isbn">ISBN</label>
     <input
-      required
+      pattern="^(\d{10}|\d{13})$"
       class="form-control" name="isbn" [(ngModel)]="book.isbn"
       #isbn="ngModel">
 
@@ -33,6 +33,7 @@
     <button type="button"
             class="btn btn-danger"
             (click)="add()"
+            [disabled]="!bookForm.valid"
             >Submit</button>
   </div>
 
